# whisper-translate

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: claude.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  keychain.rs  lib.rs  main.rs  translate.rs  whisper.rs
src-tauri/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs
src/components/: HistoryList.tsx  RecordButton.tsx  RecordingOverlay.tsx  SettingsPanel.tsx  TranscriptionView.tsx
src/hooks/: useAudioLevel.ts  useAudioRecorder.ts  useGlobalHotkey.ts  useRecordingTimer.ts  useTranslation.ts
src/lib/: tauri.ts
src/types/: index.ts
