[package]
name = "whisper-translate"
version = "0.1.0"
description = "Voice-to-text translation app using Whisper and Claude"
authors = ["Hector Moyano"]
edition = "2021"

[lib]
name = "whisper_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# macOS Keychain access
security-framework = "2.9"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Audio recording
cpal = "0.15"
hound = "3.5"

# Whisper for local transcription
whisper-rs = { version = "0.15", features = ["metal"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Futures for async streams
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Bytes for audio data
bytes = "1.5"

# UUID for history entries
uuid = { version = "1.7", features = ["v4"] }

# Regex for filler word removal
regex = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "5.0"

# Clipboard access
arboard = "3"

# macOS permissions (accessibility check/request)
tauri-plugin-macos-permissions = "2"


[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
